--- a/src/musician/sections/Teaching/TeachingStyles.module.css
+++ b/src/musician/sections/Teaching/TeachingStyles.module.css
@@ -36,11 +36,23 @@
 		margin-bottom: 150px;
 	}
 }
+
 @media (width >=800px) {
 	.span {
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: space-evenly;
 		padding: 0 30px;
+	}
+}
+@media (width <= 500px) {
+	.container {
+		margin-bottom: 30px;
+		h1 {
+			margin-bottom: 30px;
+		}
+		p {
+			margin-bottom: 20px;
+		}
 	}
 }
